# Games-Stores-Scrapers

./: DatabaseHandler.py  games.db  main.py  pyproject.toml  steamparser.py  ubisoft_scraper.py  utilities.py
Ezabi & Eyad/: analysis.py  cars.csv  main.py  originscraper.py
Lokma/: epic_games.py  itch.py  microsoft.py
